--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Daniel Blake Morris - Professional CV</title>
+
+    <title>Daniel   
+ Blake Morris - Professional CV</title>
     <link rel="icon" type="image/png" href="android-chrome-192x192.png">
     <style>
         :root {
@@ -67,22 +69,6 @@
             color: var(--accent-color);
             outline: none;
         }
-        nav ul li a::after {
-            content: '';
-            position: absolute;
-            width: 100%;
-            height: 2px;
-            bottom: -5px;
-            left: 0;
-            background-color: var(--accent-color);
-            visibility: hidden;
-            transform: scaleX(0);
-            transition: all 0.3s ease-in-out;
-        }
-        nav ul li a:hover::after {
-            visibility: visible;
-            transform: scaleX(1);
-        }
         section {
             padding: 100px 0;
             border-bottom: 1px solid #333;
@@ -111,7 +97,7 @@
         p {
             margin-bottom: 20px;
             font-size: 16px;
-            font-weight: 300;
+            
         }
         .hero {
             height: 100vh;
