--- a/index.html
+++ b/index.html
@@ -178,8 +178,8 @@
         }
         #mode-toggle {
             position: fixed;
-            top: 20px;
-            right: 20px;
+            top: 10px; /* Adjust this value as needed */
+            right: 10px;
             z-index: 1001;
             background: none;
             border: none;
