--- a/index.html
+++ b/index.html
@@ -177,15 +177,7 @@
             transition: width 1.5s ease-out;
         }
         #mode-toggle {
-            position: fixed;
-            top: 10px; /* Adjust this value as needed */
-            right: 10px;
-            z-index: 1001;
-            background: none;
-            border: none;
-            color: var(--text-color);
-            font-size: 24px;
-            cursor: pointer;
+            display: none;
         }
         @media (max-width: 768px) {
             .container {
