--- a/index.html
+++ b/index.html
@@ -232,6 +232,9 @@
             <h1>Daniel Blake Morris</h1>
             <p>NLP & ML Engineer</p>
             <a href="mailto:danielblakemorris@gmail.com" class="btn" aria-label="Request Copy of Resume">Request Copy of Resume</a>
+            <video autoplay loop muted playsinline class="hero-video">
+              <source src="hero-video.mp4" type="video/mp4">
+            </video>
         </div>
     </section>
 
