--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
             <p>NLP & ML Engineer</p>
             <a href="mailto:danielblakemorris@gmail.com" class="btn" aria-label="Request Copy of Resume">Request Copy of Resume</a>
             <video autoplay loop muted playsinline class="hero-video">
-              <source src="hero-video.mp4" type="video/mp4">
+              <source src="hero-video.mov" type="video/mov">
             </video>
         </div>
     </section>
