--- a/index.html
+++ b/index.html
@@ -112,6 +112,9 @@
             background-color: rgba(0, 0, 0, 0.7);
             padding: 40px;
             border-radius: 5px;
+            display: flex; /* Added d-flex class */
+            justify-content: center; /* Centers content horizontally */
+            align-items: center; /* Centers content vertically */
         }
         .btn {
             display: inline-block;
