--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Daniel   
+    <title>Dan   
  Blake Morris - Professional CV</title>
     <link rel="icon" type="image/png" href="android-chrome-192x192.png">
     <style>
@@ -229,7 +229,7 @@
 
     <section id="home" class="hero">
         <div class="hero-content">
-            <h1>Daniel Blake Morris</h1>
+            <h1>Dan Blake Morris</h1>
             <p>NLP & ML Engineer</p>
             <a href="mailto:danielblakemorris@gmail.com" class="btn" aria-label="Request Copy of Resume">Request Copy of Resume</a>
         </div>
