--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Dan   
- Blake Morris - Professional CV</title>
+    <title>Dan Blake Morris - Professional CV</title>
     <link rel="icon" type="image/png" href="android-chrome-192x192.png">
     <style>
         :root {
