--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             align-items: center;
             justify-content: center;
             text-align: center;
-            background: url('https://imagedelivery.net/K11gkZF3xaVyYzFESMdWIQ/889d8e28-b399-45c4-0c04-1ef1a3025800/full') no-repeat center center;
+            background: url('background.jpg') no-repeat center center;
             background-size: cover;
         }
         .hero-content {
