--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
                 <p class="date">Jan - July 2024</p>
                 <p>ISx4</p>
                 <ul>
-                    <li>Spearheaded all NLP, AI, and ML initiatives across product teams, driven fast strategic prototyping and delivered innovative solutions</li>
+                    <li>Spearheaded all NLP and ML initiatives across product teams, driven fast strategic prototyping and delivered innovative solutions</li>
                     <li>Authored and presented Generative AI research papers with Queen's University Belfast and DKIT</li>
                     <li>Mentored data scientists in NLP and ML end-to-end development</li>
                 </ul>
