--- a/vid experiment index.html
+++ b/vid experiment index.html
@@ -128,9 +128,7 @@
           <source src="backgroundvid.mp4" type="video/mp4">
           Your browser does not support the video tag.
         </video>
-        <div  
-      
-       class="hero-content">
+        <div class="hero-content">
            </div>
       </section>
       
