--- a/vidindex.html
+++ b/vidindex.html
@@ -105,7 +105,7 @@
             justify-content: center;
             text-align: center;
             position: relative; /* Allows video positioning */
-            background-color: black; /* Or any desired background color */
+            background-color: var(--bg-color);
         }
 
         .hero-video {
