--- a/vidindex.html
+++ b/vidindex.html
@@ -22,8 +22,7 @@
             --accent-hover: #00331C;
             --secondary-bg: #f0f0f0;
         }
-
-        body, html {
+        body[data-page="index"], html[data-page="index"] {
             margin: 0;
             padding: 0;
             font-family: Arial, Helvetica, sans-serif;
