--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
         nav ul li a:hover, nav ul li a:focus {
             color: var(--accent-color);
             outline: none;
+            text-decoration: underline;
         }
         section {
             padding: 100px 0;
