--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         }
         nav ul li a {
             color: var(--text-color);
-            text-decoration: none;
+            text-decoration: none; /* Remove default underline */
             font-size: 16px;
             font-weight: 300;
             text-transform: uppercase;
@@ -64,10 +64,12 @@
             transition: color 0.3s ease;
             position: relative;
         }
+        
         nav ul li a:hover, nav ul li a:focus {
-            color: var(--accent-color);
+            color: var(--accent-color); /* Change color on hover */
             outline: none;
-            text-decoration: underline;
+            text-decoration: underline; /* Add underline on hover */
+        }
         }
         section {
             padding: 100px 0;
