--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
             <p>A leading Natural Language Processing (NLP) Engineer on LinkedIn and proven Data Science and Machine Learning (ML) expert with over 4 years of experience in delivering end-to-end AI model development/training. Passionate about consulting on, researching and developing transformative AI solutions that tackle complex business use cases. Collaborated with high-profile clients and government entities through academic partnerships with Queen's University, DKIT, Lancaster University and Loughborough University, as well as in the commercial sector with Reddit, ISx4 and SVGC Ltd. Spearheaded diverse NLP projects involving heterogeneous textual data, delivering end-to-end bespoke NLP and ML models tailored to a wide range of use cases.</p>
             <li>An engineer at heart who likes to fix more than he breaks</li>
             <li>Researching and democratising niche text analytics understanding with DKIT and the Hugging Face community</li>
-            <li>Consulted across the board, from startups to Fortune Technology 10 firms</li>
+            <li>Consulted across the board, from startups to Fortune 10 Technology firms</li>
             <a href="https://www.linkedin.com/in/daniel-blake-morris" target="_blank" rel="noopener noreferrer" aria-label="Visit my LinkedIn">Connect on LinkedIn</a>
         </section>
 
