--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
                 <p class="date">Sept - Present</p>
                 <p>Reddit</p>
                 <ul>
-                    <li>Developed NLP/ML models improving content moderation and recommendation systems</li>
+                    <li>Developed NLP/ML models, and custom LLMs improving content moderation and recommendation systems</li>
                     <li>Collaborated in curating datasets for training Reddit-specific language models, performing fine-tuning and reinforcement learning to teach language models to interact with new information architectures</li>
                 </ul>
             </div>
