--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
                 </ul>
             </div>
             <div class="experience-item">
-                <h3>Senior NLP Engineer</h3>
+                <h3>Senior ML & NLP Engineer</h3>
                 <p class="date">Jan - July 2024</p>
                 <p>ISx4</p>
                 <ul>
@@ -267,7 +267,7 @@
                 </ul>
             </div>
             <div class="experience-item">
-                <h3>NLP & ML Scientist/Engineer</h3>
+                <h3>ML & NLP Scientist/Engineer</h3>
                 <p class="date">Oct 2022 - Jan 2024</p>
                 <p>Loughborough University with SVGC Ltd</p>
                 <ul>
