--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
                 </ul>
             </div>
             <div class="experience-item">
-                <h3>NLP Engineer/Researcher</h3>
+                <h3>NLP Researcher</h3>
                 <p class="date">Oct 2020 - Oct 2022</p>
                 <p>Lancaster University</p>
                 <ul>
