--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
                     </div>
                 </div>
                 <div class="skill-item">
-                    <div class="skill-name">Programming Languages (Python, R, Java, HTML)</div>
+                    <div class="skill-name">Programming Languages (Python, R, Java, TypeScript)</div>
                     <div class="skill-bar">
                         <div class="skill-level" style="width: 95%;" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
