--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
                     </div>
                 </div>
                 <div class="skill-item">
-                    <div class="skill-name">Cloud Computing (AWS, Azure, Vertex)</div>
+                    <div class="skill-name">Cloud Computing (AWS, Azure, GCP)</div>
                     <div class="skill-bar">
                         <div class="skill-level" style="width: 95%;" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
